@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-25T08:23:11Z",
-  "count_outdated" : 750,
-  "uniques_outdated" : 367,
-  "count" : 777,
-  "uniques" : 387,
+  "timestamp" : "2024-05-25T16:22:06Z",
+  "count_outdated" : 752,
+  "uniques_outdated" : 369,
+  "count" : 778,
+  "uniques" : 388,
   "clones" : [
-    {
-      "timestamp": "2024-05-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2024-05-13T00:00:00Z",
       "count": 1,
@@ -124,12 +115,12 @@
     },
     {
       "timestamp": "2024-05-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
