@@ -1,12 +1,7 @@
 {
   "count": 26,
-  "uniques": 5,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-05-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-13T00:00:00Z",
       "count": 1,
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2024-05-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
