@@ -1,3 +1,12 @@
+2024-05-25T16:22:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9236755401 # 305
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
+* notice: last 14d: unq all: 4 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 367 750 / 387 777
+* notice: next accum: outdated-unq outdated-all / unq all: 369 752 / 388 778
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2024-05-11] / [2024-05-25]
+
 2024-05-25T08:23:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9234133908 # 304
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
